--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
+    "expo-drizzle-studio-plugin": "^0.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.21",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
