--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-calendars": "^1.1306.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "expo-dev-client": "~4.0.23"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
