Configured eas, fixed bug with unavailable table on first app open, fixed cycle status texts

--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "userInterfaceStyle": "automatic",
     "ios": {
       "supportsTablet": true,
-        "splash": {
+      "splash": {
         "image": "./assets/splash.png",
         "resizeMode": "contain",
         "backgroundColor": "#ffffff",
@@ -42,6 +42,14 @@
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "48d6445a-942c-474d-be16-5d46d6f25603"
+      }
+    }
   }
 }
