--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
-    "expo-dev-client": "~4.0.23"
+    "expo-dev-client": "~4.0.23",
+    "expo-system-ui": "~3.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
