--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   "dependencies": {
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.23",
     "expo-drizzle-studio-plugin": "^0.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1306.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
-    "expo-dev-client": "~4.0.23",
-    "expo-system-ui": "~3.0.7"
+    "react-native-wheel-scrollview-picker": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
