--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-wheel-scrollview-picker": "^2.0.4"
+    "react-native-wheel-scrollview-picker": "^2.0.4",
+    "@react-native-picker/picker": "2.7.5",
+    "@react-native-community/datetimepicker": "8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
