--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "expo": "~51.0.28",
-    "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.23",
     "expo-drizzle-studio-plugin": "^0.0.2",
     "expo-linking": "~6.3.1",
@@ -24,10 +23,11 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-wheel-scrollview-picker": "^2.0.4",
     "@react-native-picker/picker": "2.7.5",
     "@react-native-community/datetimepicker": "8.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-notifications": "~0.28.15",
+    "expo-sharing": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
