--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "expo-notifications": "~0.28.15",
-    "expo-sharing": "~12.0.1"
+    "expo-sharing": "~12.0.1",
+    "expo-file-system": "~17.0.1",
+    "expo-document-picker": "~12.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
