Setup eas submit & bump to version 1.0.2

--- a/eas.json
+++ b/eas.json
@@ -19,6 +19,10 @@
         }
     },
     "submit": {
-        "production": {}
+        "production": {
+            "android": {
+                "serviceAccountKeyPath": "./subcycle-c9f6cae82d4e.json"
+            }
+        }
     }
 }
