--- a/package.json
+++ b/package.json
@@ -9,27 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-picker/picker": "2.7.5",
     "expo": "~51.0.28",
     "expo-dev-client": "~4.0.23",
+    "expo-document-picker": "~12.0.2",
     "expo-drizzle-studio-plugin": "^0.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.15",
     "expo-router": "~3.5.23",
+    "expo-sharing": "~12.0.1",
     "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1306.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
-    "@react-native-picker/picker": "2.7.5",
-    "@react-native-community/datetimepicker": "8.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-notifications": "~0.28.15",
-    "expo-sharing": "~12.0.1",
-    "expo-file-system": "~17.0.1",
-    "expo-document-picker": "~12.0.2"
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
