--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-picker/picker": "2.7.5",
+    "@tabler/icons-react-native": "^3.14.0",
     "expo": "~51.0.28",
     "expo-dev-client": "~4.0.23",
     "expo-document-picker": "~12.0.2",
