--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-picker/picker": "2.7.5",
     "@tabler/icons-react-native": "^3.14.0",
-    "expo": "~51.0.28",
-    "expo-dev-client": "~4.0.23",
+    "expo": "~51.0.31",
+    "expo-dev-client": "~4.0.26",
     "expo-document-picker": "~12.0.2",
     "expo-drizzle-studio-plugin": "^0.0.2",
     "expo-file-system": "~17.0.1",
     "expo-linking": "~6.3.1",
-    "expo-notifications": "~0.28.15",
+    "expo-notifications": "~0.28.16",
     "expo-router": "~3.5.23",
     "expo-sharing": "~12.0.1",
     "expo-sqlite": "~14.0.6",
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
