--- a/package.json
+++ b/package.json
@@ -3,45 +3,45 @@
     "version": "1.0.0",
     "main": "expo-router/entry",
     "scripts": {
+        "expo-install": "expo install --check",
         "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web"
+        "start-reset-cache": "expo start --reset-cache",
+        "build-dev": "eas build --platform android --profile development"
     },
     "dependencies": {
-        "@gorhom/bottom-sheet": "^4.6.4",
-        "@react-native-async-storage/async-storage": "1.23.1",
-        "@react-native-community/datetimepicker": "8.0.1",
-        "@react-native-picker/picker": "2.7.5",
-        "@tabler/icons-react-native": "^3.14.0",
-        "expo": "~51.0.31",
-        "expo-dev-client": "~4.0.26",
-        "expo-document-picker": "~12.0.2",
-        "expo-drizzle-studio-plugin": "^0.0.2",
-        "expo-file-system": "~17.0.1",
-        "expo-linking": "~6.3.1",
-        "expo-notifications": "~0.28.16",
-        "expo-router": "~3.5.23",
-        "expo-sharing": "~12.0.1",
-        "expo-sqlite": "~14.0.6",
-        "expo-status-bar": "~1.12.1",
-        "expo-system-ui": "~3.0.7",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-native": "0.74.5",
-        "react-native-calendars": "^1.1306.0",
-        "react-native-gesture-handler": "~2.16.1",
-        "react-native-paper": "^5.12.5",
-        "react-native-reanimated": "~3.10.1",
-        "react-native-safe-area-context": "^4.10.5",
-        "react-native-screens": "3.31.1",
-        "react-native-svg": "15.2.0"
+        "@gorhom/bottom-sheet": "^5.1.6",
+        "@react-native-async-storage/async-storage": "2.1.2",
+        "@react-native-community/datetimepicker": "8.3.0",
+        "@react-native-picker/picker": "2.11.0",
+        "@tabler/icons-react-native": "^3.34.0",
+        "expo": "~53.0.11",
+        "expo-dev-client": "~5.2.0",
+        "expo-document-picker": "~13.1.5",
+        "expo-drizzle-studio-plugin": "^0.1.2",
+        "expo-file-system": "~18.1.10",
+        "expo-linking": "~7.1.5",
+        "expo-notifications": "~0.31.3",
+        "expo-router": "~5.1.0",
+        "expo-sharing": "~13.1.5",
+        "expo-sqlite": "~15.2.12",
+        "expo-status-bar": "~2.2.3",
+        "expo-system-ui": "~5.0.8",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
+        "react-native": "0.79.3",
+        "react-native-calendars": "^1.1312.1",
+        "react-native-gesture-handler": "~2.24.0",
+        "react-native-paper": "^5.14.5",
+        "react-native-reanimated": "~3.17.4",
+        "react-native-safe-area-context": "5.4.0",
+        "react-native-screens": "4.11.1",
+        "react-native-svg": "15.11.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "@types/react": "~18.2.45",
-        "prettier": "3.3.3",
-        "typescript": "~5.3.3"
+        "@babel/core": "^7.27.4",
+        "@types/react": "~19.0.10",
+        "prettier": "3.5.3",
+        "typescript": "~5.8.3"
     },
     "private": true
 }
