--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "expo-sqlite": "~15.2.12",
         "expo-status-bar": "~2.2.3",
         "expo-system-ui": "~5.0.8",
+        "expo-task-manager": "~13.1.5",
         "react": "19.0.0",
         "react-dom": "19.0.0",
         "react-native": "0.79.3",
